<resources>
    <string name="app_name">Avengers Quizzis</string>
    <string name="name">Introduzca su apodo</string>
    <string name="iniciar">Iniciar</string>
    <string name="primerapregunta">¿Cual es el verdadero nombre del Capitán América?</string>
    <string name="retroceder">Retroceder</string>
    <string name="siguiente">Siguiente</string>
    <string name="pregunta_1">Pregunta 1:</string>
    <string name="pregunta_2">Pregunta 2:</string>
    <string name="segundapregunta">Selecciona la o las respuestas correctas</string>
    <string name="pregunta_3">Pregunta 3:</string>
    <string name="tercerapregunta">¿A qué grupo pertenece Deadpool?</string>
    <string name="cuartapregunta">¿Como se llamaba la IA de Iron Man?</string>
    <string name="pregunta_4">Pregunta 4:</string>
    <string name="respuesta">Introduzca su respuesta</string>
    <string name="quintapregunta">¿Cómo se llama el lugar de origen de Thor?</string>
    <string name="pregunta_5">Pregunta 5:</string>
    <string name="pregunta_6">Pregunta 6:</string>
    <string name="sextapregunta">¿Cuáles son péliculas reales de Hulk?</string>
    <string name="pregunta_7">Pregunta 7:</string>
    <string name="septimapregunta">¿De dónde salen los poderes de Visión?</string>
    <string name="pregunta_8">Pregunta 8:</string>
    <string name="octavapregunta">¿Cuál es el nombre del preciado material de Wakanda?</string>
    <string name="eleccion">Seleccione un tema</string>
    <string name="novenapregunta">¿Cuál es la debilidad de Superman?</string>
    <string name="decimapregunta">¿Qué vehículos tiene Batman?</string>
    <string name="oncepregunta">¿Qué otro personaje protagoniza el actor de Linterna Verde?</string>
    <string name="docepregunta">¿A dónde pertenecía la Chica Maravilla?</string>
    <string name="trecepregunta">¿Cómo se llama el personaje?</string>
    <string name="catorcepregunta">¿A cual película derrotó Aquaman?</string>
    <string name="quincepregunta">¿A qué se dedicaba Green Arrow?</string>
    <string name="deciseispregunta">¿Cuál es el apodo de este Superhéroe?</string>
    <string name="timertext">00:00</string>
    <string name="elegir">Seleccione un tema</string>
    <string name="correcta">Steve Grant Rogers</string>
    <string name="primerarespuesta1">Stevens Konstlyn</string>
    <string name="primerarespuesta3">Rogers Steve Konstlyn</string>
    <string name="respuestacorrectaspider">Spiderman es Peter Parker</string>
    <string name="respuestacorrectaspider1">Spiderman es Tom Holland</string>
    <string name="respuestaincorrectaspider">Spiderman es Mike Towers</string>
    <string name="correctadeadpool">X-Force</string>
    <string name="incorrectadeadpool">X-Men</string>
    <string name="incorrectadeadpool1">Avengers</string>
    <string name="correctahulk">El Increible Hulk</string>
    <string name="correctahulk1">Hulk</string>
    <string name="incorrectahulk">Hulk, el surgimiento</string>
    <string name="correctavision">Gema de la Mente</string>
    <string name="incorrectavision">Gema del tiempo</string>
    <string name="incorrectavision1">Universo</string>
    <string name="correctasuperman">Kryptonita</string>
    <string name="incorrectasuperman">Vibranium</string>
    <string name="incorrectasuperman1">Ácido nítrico</string>
    <string name="correctabatman">Batimovil</string>
    <string name="incorrectabatman">Baticasa</string>
    <string name="incorrectabatman1">Lamborghini</string>
    <string name="correctamaravilla">Amazonas</string>
    <string name="incorrectamaravilla">Wakanda</string>
    <string name="incorrectamaravilla1">Europa del Este</string>
    <string name="correctabaquaman">Batman</string>
    <string name="incorrectabaquaman">Superman</string>
    <string name="correctaarrow">Usar Arco y flechas</string>
    <string name="correctaarrow2">Combatir el crimen</string>
    <string name="incorrectaarrow">Destruir la ciudad</string>
    <string name="felicitacion">Héroe de Marvel</string>
    <string name="nombrepersona">Felicidades,</string>
    <string name="incorrectas">Incorrectas:</string>
    <string name="correctas">Correctas:</string>
    <string name="puntuaci_n">Puntuación:</string>
    <string name="_0">0</string>
    <string name="_0_8">0/8</string>
    <string name="compartir">Compartir</string>
</resources>